<resources>
    <string name="app_name">MyCodingApp</string>
    <string name="tv_login_text">Login</string>
    <string name="et_name_login_hint_text">Nombre</string>
    <string name="et_password_hint_text">Contraseña</string>
    <string name="btn_acceder_text">Acceder</string>
    <string name="btn_crear_cuenta_text">Crear nueva cuenta</string>
    <string name="tv_new_account_text">Nueva cuenta</string>
    <string name="et_nombre_nueva_cuenta_text_hint">Nombre de usuario</string>
    <string name="et_pwd_nueva_cuenta">Contraseña</string>
    <string name="et_pwd_rep_nueva_cuenta_text_hint">Confirmar contraseña</string>
    <string name="btn_crear_nueva_cuenta_text">Crear cuenta</string>
    <string name="tv_nuevo_lenguaje_text">Nuevo lenguaje de\nprogramación</string>
    <string name="et_lenguaje_hint_text">Lenguaje de programación</string>
    <string name="btn_guardar_lenguaje_text">Guardar lenguaje</string>
    <string name="tv_nuevo_proyecto">Nuevo proyecto</string>
    <string name="et_nombre_proyecto_text_hint">Nombre del proyecto</string>
    <string name="et_description_text_hint">Breve descripción del proyecto</string>
    <string name="tv_fecha_text">Fecha de inicio</string>
    <string name="tv_prioridad_text">Prioridad</string>
    <string name="rb_baja_text">Baja</string>
    <string name="rb_media_text">Media</string>
    <string name="rb_alta_text">Alta</string>
    <string name="tv_tiempo_emplear_text">Tiempo a emplear</string>
    <string name="et_tiempo_emplear_text_hint">Número de horas</string>
    <string name="tv_lenguaje_text">Lenguaje</string>
    <string name="tv_detalle">Detalle del proyecto</string>
    <string name="et_detalle_hint_text">Detalle del proyecto</string>
    <string name="btn_guardar_proyecto_text">Guardar proyecto</string>
    <string name="tv_nombre_proyecto_text">Nombre del proyecto</string>
    <string name="tv_descripcion_proyecto_text">Breve descripción del proyecto</string>
    <string name="tv_fecha_inicio_text">Fecha de inicio:</string>
    <string name="tv_prioridad_proyecto_text">Prioridad</string>
    <string name="rb_baja_prioridad_text">Baja</string>
    <string name="rb_media_prioridad_text">Media</string>
    <string name="rb_alta_prioridad_text">Alta</string>
    <string name="tv_tiempo_empleado_text">Tiempo a emplear:</string>
    <string name="et_tiempo_emplear_proyecto_text">Tiempo</string>
    <string name="tv_lenguaje_proyecto_text">Lenguaje:</string>
    <string name="tv_fecha_inicio_escogida_text">fecha</string>
    <string name="tv_lenguaje_proyecto_escogido_text">lenguaje</string>
    <string name="et_detalle_proyecto_text">Decripción en detalle</string>
    <string name="btn_guardar_cambios_proyecto_text">Guardar cambios</string>
    <string name="tv_language">lenguaje</string>
    <string name="tv_item_language_text">Lenguaje</string>
    <string name="tv_item_initial_time_text">XXX</string>
    <string name="tv_priority_text">"Prioridad: "</string>
    <string name="tv_item_priority_text">xxxxx</string>
    <string name="tv_item_project_name_text">Nombre del proyecto</string>
    <string name="tv_item_description_project_text">Breve descripción del proyecto</string>
    <string name="tv_item_date_text">"Fecha de inicio: "</string>
    <string name="tv_item_initial_date_text">fecha</string>
    <string name="btn_borrar_proyecto_text">Borrar proyecto</string>
    <string name="fab_description_text">floating action button crear proyecto</string>
    <string name="toolbar_title_text">Lista de Proyectos</string>
    <string name="btn_añadir_lenguaje_text">Lenguajes</string>
    <string name="fab_add_lenguaje_text">botón para añadir lenguaje</string>
    <string name="tv_horas_text">"  horas"</string>
    <string name="toolbar_list_languages_title_text">Lista de Lenguajes</string>
    <string name="btn_proyectos_text">Proyectos</string>
    <string name="tiptext_text">Lenguaje</string>
    <string name="delete_language">Eliminar</string>
</resources>