<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_green"
    tools:context=".ui.NewAccountActivity">

    <TextView
        android:id="@+id/tv_nueva_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/acme"
        android:text="@string/tv_new_account_text"
        android:textColor="@color/green_title"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_nombre_nueva_cuenta"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/et_nombre_nueva_cuenta_text_hint"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_tint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nueva_cuenta" />

    <EditText
        android:id="@+id/et_pwd_nueva_cuenta"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/et_pwd_nueva_cuenta"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_tint"
        app:layout_constraintEnd_toEndOf="@+id/et_nombre_nueva_cuenta"
        app:layout_constraintStart_toStartOf="@+id/et_nombre_nueva_cuenta"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre_nueva_cuenta" />

    <EditText
        android:id="@+id/et_pwd_rep_nueva_cuenta"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/et_pwd_rep_nueva_cuenta_text_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_tint"
        app:layout_constraintEnd_toEndOf="@+id/et_pwd_nueva_cuenta"
        app:layout_constraintStart_toStartOf="@+id/et_pwd_nueva_cuenta"
        app:layout_constraintTop_toBottomOf="@+id/et_pwd_nueva_cuenta" />

    <Button
        android:id="@+id/btn_crear_cuenta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/green_btn"
        android:fontFamily="@font/acme"
        android:text="@string/btn_crear_nueva_cuenta_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/et_pwd_rep_nueva_cuenta"
        app:layout_constraintStart_toStartOf="@+id/et_pwd_rep_nueva_cuenta"
        app:layout_constraintTop_toBottomOf="@+id/et_pwd_rep_nueva_cuenta" />

</androidx.constraintlayout.widget.ConstraintLayout>